# rosbot_xl_manipulation_ros

./: LICENSE.txt  README.md  ROS_API.md
.github/workflows/: bump_version.yaml
rosbot_xl_manipulation/: CHANGELOG.rst  CMakeLists.txt  package.xml  rosbot_xl_manipulation.repos
rosbot_xl_manipulation_bringup/: CHANGELOG.rst  CMakeLists.txt  package.xml
rosbot_xl_manipulation_bringup/launch/: bringup.launch.py
rosbot_xl_manipulation_controller/: CHANGELOG.rst  CMakeLists.txt  package.xml
rosbot_xl_manipulation_controller/config/: diff_drive_controller_manipulation.yaml  mecanum_drive_controller_manipulation.yaml
rosbot_xl_manipulation_controller/launch/: controller.launch.py
rosbot_xl_manipulation_description/: CHANGELOG.rst  CMakeLists.txt  package.xml
rosbot_xl_manipulation_description/urdf/: rosbot_xl_manipulation.urdf.xacro
rosbot_xl_manipulation_gazebo/: CHANGELOG.rst  CMakeLists.txt  package.xml
rosbot_xl_manipulation_gazebo/launch/: simulation.launch.py
rosbot_xl_manipulation_moveit/: .setup_assistant  CHANGELOG.rst  CMakeLists.txt  package.xml
rosbot_xl_manipulation_moveit/config/: joint_limits.yaml  joy_servo.yaml  kinematics.yaml  moveit.rviz  moveit_controllers.yaml  ompl_planning.yaml  rosbot_xl.srdf  rosbot_xl_manipulation.srdf  servo.yaml
rosbot_xl_manipulation_moveit/include/rosbot_xl_manipulation_moveit/: JoyControl.h  MoveitControllers.h  joy_control.hpp  joy_servo_node.hpp  manipulation_controller.hpp
rosbot_xl_manipulation_moveit/launch/: move_group.launch.py  rviz.launch.py  servo.launch.py  setup_assistant.launch.py
rosbot_xl_manipulation_moveit/rosbot_xl_manipulation_moveit/: joy_servo_node.py  start_moveit_servo_node.py
rosbot_xl_manipulation_moveit/src/: JoyControl.cpp  MoveitControllers.cpp  joy_control.cpp  joy_servo_node.cpp  manipulation_controller.cpp
