<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>rosbot_xl_manipulation_description</name>
  <version>1.1.2</version>

  <description>The rosbot_xl_manipulation_description package</description>
  <license>Apache License 2.0</license>

  <author email="maciej.stepien@husarion.com">Maciej Stepien</author>
  <maintainer email="contact@husarion.com">Husarion</maintainer>

  <url type="website">https://husarion.com/</url>
  <url type="repository">https://github.com/husarion/rosbot_xl_manipulation_ros</url>
  <url type="bugtracker">https://github.com/husarion/rosbot_xl_manipulation_ros/issues</url>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>xacro</build_depend>
  <exec_depend>xacro</exec_depend>
  
  <exec_depend>rosbot_description</exec_depend>
  <exec_depend>open_manipulator_x_description</exec_depend>
  <exec_depend>ros_components_description</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
